# support-process-flowchart

./: README.md  pyproject.toml
data/sample/: support_process.json
notebooks/: 01_exploracao.ipynb
scripts/: download_data.py
src/: main.py
