[project]
name = "support-process-flowchart"
version = "0.1.0"
description = "Support-process modeling lab that renders a triage, diagnosis, resolution, and closure flowchart."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alberto Mateus P. da Gama" }]

[tool.pytest.ini_options]
pythonpath = ["."]
